--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.jpa.properties.hibernate.hbm2ddl.auto=create
+spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+
+server.port=8888
+
+spring.mvc.hiddenmethod.filter.enabled=true
+
+#logging.level.org.springframework=debug
+#logging.level.org.hibernate=debug
